--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aos": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-particles": "^2.3.2",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.3.2",
     "tslib": "^2.4.0",
     "tsparticles": "^2.3.2",
     "tsparticles-engine": "^2.3.2"
